# MindMesh

./: LICENSE  README.md  pyproject.toml  rebrand.py  render.yaml  requirements.txt
maieo/: api.py  cli.py  config.py  server.py
maieo-web/: middleware.ts  package-lock.json  package.json  schema.sql
maieo-web/app/: globals.css  layout.tsx  page.tsx
maieo-web/app/api/debate/: route.ts
maieo-web/app/api/history/: route.ts
maieo-web/app/api/history/[id]/: route.ts
maieo-web/app/share/[shareId]/: page.tsx
maieo-web/app/sign-in/[[...sign-in]]/: page.tsx
maieo-web/app/sign-up/[[...sign-up]]/: page.tsx
maieo-web/components/: AgentStatus.tsx  ChatArea.tsx  DebateCard.tsx  InputBar.tsx  LandingPage.tsx  MobileHistorySheet.tsx  MobileNav.tsx  Sidebar.tsx  ThemeToggle.tsx  Toast.tsx  TypingCard.tsx
maieo-web/lib/: api.ts  debates.ts  share.ts  storage.ts
maieo-web/public/: manifest.json
maieo-web/types/: debate.ts
maieo/agents/: arbitrator.py  base.py  challenger.py  proposer.py  synthesizer.py
maieo/core/: debate.py  models.py  router.py
mindmesh/: api.py  cli.py  server.py
mindmesh-web/app/: layout.tsx  page.tsx
mindmesh-web/app/share/[shareId]/: page.tsx
mindmesh-web/components/: DebateCard.tsx  LandingPage.tsx  Sidebar.tsx
